@@ -88,9 +88,11 @@ class new_editable_comboboxlayoutmanager
 	new_editable_comboboxlayoutmanager &operator=
 	(const new_editable_comboboxlayoutmanager &) LIBCXX_PUBLIC;
 
+private:
 	//! Implement selection_factory()
-	focusable selection_factory(const factory &) const override;
-
+	focusable selection_factory(const factory &) const override
+		LIBCXX_HIDDEN;
+public:
 	//! Callback that gets invoked when the combo-box selection changes.
 
 	editable_combobox_selection_changed_t selection_changed;
