@@ -5,14 +5,15 @@
 #include "libcxxw_config.h"
 #include "uicompiler.H"
 #include "messages.H"
-#include "x/w/editable_comboboxlayoutmanager.H"
+#include "x/w/custom_comboboxlayoutmanager.H"
 #include "x/w/uigenerators.H"
 #include "x/w/uielements.H"
-#include "x/w/input_field_appearance.H"
+#include "x/w/synchronized_axis.H"
+#include "x/w/combobox_appearance.H"
 
 LIBCXXW_NAMESPACE_START
 
-#include "uicompiler.inc.H/new_editable_comboboxlayout_parse_parameters.H"
-#include "uicompiler.inc.H/new_editable_comboboxlayout_parser.H"
+#include "uicompiler.inc.H/new_custom_comboboxlayout_parse_parameters.H"
+#include "uicompiler.inc.H/new_custom_comboboxlayout_parser.H"
 
 LIBCXXW_NAMESPACE_END
